--- a/style.css
+++ b/style.css
@@ -313,7 +313,8 @@ button {
 
 .About-us {
   width: 100%;
-  padding: 40px 20px;
+  height: 100%;
+  padding: 85px 20px;
   background-color: white;
 }
 
@@ -460,13 +461,18 @@ button {
 
 .service-box h3 {
   font-size: 20px;
-  color: #209094;
+  color: black;
   margin-bottom: 10px;
 }
 
 .service-box p {
   font-size: 14px;
   color: #555;
+}
+.service-box i {
+  font-size: 40px; /* غيّر الحجم حسب ما تريد */
+  color: black;   /* إن أردت تغيير اللون أيضًا */
+  margin-bottom: 10px;
 }
 
 /* استجابة للأجهزة الصغيرة */
@@ -514,6 +520,15 @@ button {
   padding: 30px ;
   position: relative;
   align-items: center;
+}
+.core-values small{
+  color: black;
+  font-size: 14px;
+}
+.core-values span{
+  color: #206a70;
+  font-size: 28px;
+
 }
 
 .core-values .title {
@@ -566,6 +581,8 @@ button {
   left: 50%;
   transform: translateX(-50%);
   border-radius: 10px;
+  height: auto;
+ 
 }
 
 .value-box.left-top {
@@ -573,6 +590,8 @@ button {
   left: 0;
   transform: translateX(-70%);
   border-radius: 10px;
+  height: auto;
+ 
 }
 
 .value-box.left-bottom {
@@ -580,6 +599,7 @@ button {
   left: 0;
   transform: translateX(-70%);
   border-radius: 10px;
+  height: auto;
 }
 
 .value-box.right-top {
@@ -587,6 +607,7 @@ button {
   right: 0;
   transform: translateX(70%);
   border-radius: 10px;
+  height: auto;
 }
 
 .value-box.right-bottom {
@@ -594,6 +615,7 @@ button {
   right: 0;
   transform: translateX(70%);
   border-radius: 10px;
+  height: auto;
 }
 
 /* Responsive fallback */
@@ -677,7 +699,7 @@ button {
 /* Offers Section */
 .offers {
   width: 100%;
-  padding: 30px 20px;
+  padding: 85px 20px;
   background: #f7f9fb;
   box-shadow: inset 0 0 40px #d1d9e6;
   border-radius: 12px;
@@ -795,7 +817,7 @@ button {
 /* Scroll buttons */
 .scroll-btn {
   position: absolute;
-  top: 50%;
+  top: 90%;
   transform: translateY(-50%);
   background-color: #209094;
   color: white;
